--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".presentation.details.BookDetailsActivity"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".presentation.details.BookDetailsActivity"
+              android:orientation="vertical">
+
+    <include layout="@layout/include_toolbar" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/book_details_title_label"
-        android:textStyle="bold"
-        android:textColor="#000"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/book_details_title_label"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            style="@style/MyTextViewLabel"/>
 
     <TextView
-        android:id="@+id/bookDetailsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Title 1"
-        android:textColor="#000"
-        />
+            android:id="@+id/bookDetailsTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            tools:text="Title 1"
+    />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/book_details_description_label"
-        android:layout_marginTop="8dp"
-        android:textStyle="bold"
-        android:textColor="#000"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/book_details_description_label"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            style="@style/MyTextViewLabel"/>
 
     <TextView
-        android:id="@+id/bookDetailsDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Description 1"
-        android:textColor="#000"
-        />
-
+            android:id="@+id/bookDetailsDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            tools:text="Description 1"
+    />
 
 
 </LinearLayout>
