--- a/app/src/main/res/layout/activity_books.xml
+++ b/app/src/main/res/layout/activity_books.xml
@@ -6,13 +6,10 @@
                                              android:layout_height="match_parent"
                                              tools:context=".presentation.books.BooksActivity">
 
-    <android.support.v7.widget.Toolbar android:id="@+id/toolbarMain"
-                                       android:layout_width="0dp"
-                                       android:layout_height="?android:attr/actionBarSize"
-                                       android:background="@color/colorPrimary"
-                                       app:layout_constraintTop_toTopOf="parent"
-                                       app:layout_constraintStart_toStartOf="parent"
-                                       app:layout_constraintEnd_toEndOf="parent"/>
+    <include layout="@layout/include_toolbar"
+             app:layout_constraintTop_toTopOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent" />
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerBooks"
